[metadata]
name = apprentice
author = Christopher J. MacLellan
author-email = maclellan.christopher@gmail.com
summary = A framework for creating apprentice agents that learn from demonstrations and feedback.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://hq-git.soartech.com/apprentice/apprentice
project_urls = 
    Source Code = https://hq-git.soartech.com/apprentice/apprentice
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy

[files]
package =
    apprentice

[bdist_wheel]
universal=1
